nextcloud/middleware-https.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
